# EasyDash

./: .gitignore  LICENSE  README.md  pyproject.toml
UdpListener/: CMakeLists.txt
UdpListener/src/: UdpReceiver.cpp  UdpReceiver.h  main.cpp
src/acc_dashboard/: controller.py  main.py
src/acc_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/acc_dashboard/processors/: fuel.py  tires.py  track.py
src/acc_dashboard/resources/tracks/Barcelona/: points_Barcelona.json
src/acc_dashboard/resources/tracks/Spa/: points_Spa.json
src/acc_dashboard/resources/tracks/monza/: points_monza.json
src/acc_dashboard/resources/tracks/nurburgring/: points_nurburgring.json
src/acc_dashboard/telemetry/: __init__.py  shared_memory.py
src/acc_dashboard/ui/: main_window.py  theme.py
src/helpers/: acc_dump.json  draw_map_fot_test.py  print_all_data.py  track_recorder.py
